Fix header spacing

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -56,6 +56,8 @@ canvas{
   margin-bottom: 25px;
 }
 #header {
+  margin-bottom: 40px;
+
   .container {
     margin:0 auto;
   }
@@ -130,8 +132,6 @@ canvas{
 }
 #home{
   .shapes {
-    margin-top:40px;
-
     h2{
       font-weight: 300;
       font-size: 16px;
